# dirsoulv1.0

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  docker-compose.yml
config/: models.toml
docs/: DirSoul 项目开发手册（V1.0 版本）.md  PROMOTION.md  PUBLISHING_GUIDE.md  Sponsors.md  chat22.md  chat33.md  chat44.md  chat55.md  chat66.md  chat77.md  chat88.md  head.md  todo.md
docs/skills/: check_architecture_compliance.md  code_review.md  cognitive_view_generation.md  debugging.md  deeptalk_implementation.md  documentation.md  encryption_best_practices.md  entity_resolution.md  estimate_resource_usage.md  event_extraction_patterns.md  frontend_design.md  ollama_prompt_engineering.md  plugin_permission_system.md  postgres_schema_design.md  project_memory.md  rust_memory_safety.md  simulate_cognitive_evolution.md  test_extraction_prompt.md  testing_and_debugging.md
prompts/: chat_personality.txt  chat_system.txt  decision.txt  deeptalk.txt  entity_linking.txt  event_extraction.txt  psychology.txt
src/python/: requirements.txt
src/python/rlm/: README.md  __init__.py  context.py  manager.py  query.py  requirements.txt
src/python/streamlit/: app.py
src/python/telegram_bot/: Dockerfile  README.md  __init__.py  api_client.py  bot.py  requirements.txt
src/rust/: Cargo.toml
src/rust/migrations/2026-02-03-110937-0000_create_raw_memories_table/: down.sql  up.sql
src/rust/migrations/2026-02-03-114406-0000_create_event_memories_table/: down.sql  up.sql
src/rust/migrations/2026-02-03-120819-0000_create_entities_tables/: down.sql  up.sql
src/rust/migrations/2026-02-03-141727-0000_add_counter_evidence_to_cognitive_views/: down.sql  up.sql
src/rust/migrations/2026-02-03-150258-0000_create_agents_table/: down.sql  up.sql
src/rust/migrations/2026-02-03-214845-0000_create_stable_concepts_table/: down.sql  up.sql
src/rust/migrations/2026-02-03-214900-0000_create_cognitive_views_table/: down.sql  up.sql
src/rust/migrations/2026-02-04-000000_create_audit_logs_table/: down.sql  up.sql
src/rust/src/: actor_agent.rs  agents.rs  audit.rs  built_in_plugins.rs  cognitive.rs  crypto.rs  data_lifecycle.rs  deeptalk.rs  embedding.rs  entity_attribute_extractor.rs  entity_linker.rs  entity_relation_extractor.rs  entity_summarizer.rs  error.rs  event_aggregator.rs  event_extractor.rs  event_storage.rs  export.rs  http_api.rs  input.rs  lib.rs  llm_provider.rs  main.rs  models.rs  pattern_detector.rs  plugin.rs  prompt_manager.rs  resource_manager.rs  schema.rs  security_tests.rs  view_generator.rs
src/rust/tests/: cognitive_evolution_test.rs  entity_memory_integration_test.rs
todo/: head.md  todo.md
